k8s-demo/apps/backend/base/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: utterai-api-green-service
  labels:
    app: utterai-api
    app.kubernetes.io/name: utterai-api
    app.kubernetes.io/part-of: utterai
    color: green
spec:
  type: ClusterIP
  selector:
    app: utterai-api
    color: green
  ports:
    - name: http
      port: 8080
      targetPort: http
