k8s-demo/apps/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utterai-api-service
  labels:
    app: utterai-api
    app.kubernetes.io/name: utterai-api
    app.kubernetes.io/part-of: utterai
spec:
  type: ClusterIP
  selector:
    app: utterai-api
    color: blue
  ports:
    - name: http
      port: 8080
      targetPort: http
